# libdbc

./: .gitmodules  LICENSE-Vector.txt  README.md  meson.build
include/: __libdbc.h  __libdbc_util.h  libdbc.h  libdbc_node.h  libdbc_value_table.h
src/: libdbc.c  libdbc_node.c  libdbc_value_table.c  parser.c
test/: libdbc_stubs.h  test_creation.c  test_node.c  test_parsing.c  test_value_table.c
